--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -2,8 +2,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100%;
+  height: 100vh;
   width: 100%;
+  background-image: url("../assets/images/large.png");
 }
 
 .text {
