--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,15 +1,11 @@
 .root {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   height: 100vh;
   width: 100%;
-  background-image: url("../assets/images/large.png");
+  padding: 12px;
+  background: url("../assets/images/large.png") black no-repeat;
 }
 
 .text {
   align-items: center;
   justify-content: center;
-  font-family: sans-serif;
-  font-size: 24px;
 }
