--- a/src/app/test/test.scss
+++ b/src/app/test/test.scss
@@ -1,15 +1,8 @@
-.root {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  width: 100%;
-}
+@import "../../styles/variables";
 
-.text {
+.root {
   align-items: center;
   justify-content: center;
-  font-family: sans-serif;
-  font-size: 24px;
-  color: blue;
+  color: $color-gray;
+  font-size: 30px;
 }
