Fisrt step configuring ngrx

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,4 @@
 <div class="root">
   <img src="../assets/images/application-logo.svg"/>
-  <rsm-test></rsm-test>
+  <rsm-sample></rsm-sample>
 </div>
